"main" is the name of the merged df

--- a/PROJ 2950.ipynb
+++ b/PROJ 2950.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "4    0.245483                      0.382612           2.430182  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "4      Finland               5            7.469"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {
     "scrolled": true
    },
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
        "4  2017-01-01     no  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
        "4     no  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,9 +895,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-49-4e3fa1ecd29c>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-49-4e3fa1ecd29c>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    for index, country in enumerate(countries_to_subset)\u001b[0m\n\u001b[0m                                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "#associates a number with the index\n",
     "#find what index matches with the country. use index()\n",
@@ -906,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -927,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1065,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1183,7 +1192,7 @@
        "4     no  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1258,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1271,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1375,7 +1384,7 @@
        "18549  https://open.spotify.com/track/43ZyHQITOjhciSU...  2018-01-09     no  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1395,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1513,7 +1522,7 @@
        "4     no  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1579,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1652,7 +1661,7 @@
        "4      Finland             5.0            7.469"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1682,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1793,7 +1802,7 @@
        "4     no  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1865,7 +1874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1880,7 +1889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1900,7 +1909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1911,7 +1920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 61,
    "metadata": {
     "scrolled": true
    },
@@ -1930,7 +1939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2048,7 +2057,7 @@
        "4     no  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2056,6 +2065,221 @@
    "source": [
     "print(norway.shape)\n",
     "norway.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge separate country dataframes for ease of later analysis using concat\n",
+    "main=pd.DataFrame()\n",
+    "for country in countries_to_subset:\n",
+    "    main=pd.concat([main,country])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Position</th>\n",
+       "      <th>Track Name</th>\n",
+       "      <th>Artist</th>\n",
+       "      <th>Streams</th>\n",
+       "      <th>URL</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Region</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Alone</td>\n",
+       "      <td>Alan Walker</td>\n",
+       "      <td>103886</td>\n",
+       "      <td>https://open.spotify.com/track/0JiVRyTJcJnmlwC...</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Rockabye (feat. Sean Paul &amp; Anne-Marie)</td>\n",
+       "      <td>Clean Bandit</td>\n",
+       "      <td>85990</td>\n",
+       "      <td>https://open.spotify.com/track/5knuzwU65gJK7IF...</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>I Don’t Wanna Live Forever (Fifty Shades Darke...</td>\n",
+       "      <td>ZAYN</td>\n",
+       "      <td>68706</td>\n",
+       "      <td>https://open.spotify.com/track/3NdDpSvN911VPGi...</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Call On Me - Ryan Riback Extended Remix</td>\n",
+       "      <td>Starley</td>\n",
+       "      <td>60334</td>\n",
+       "      <td>https://open.spotify.com/track/78rIJddV4X0HkNA...</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>I Feel It Coming</td>\n",
+       "      <td>The Weeknd</td>\n",
+       "      <td>56607</td>\n",
+       "      <td>https://open.spotify.com/track/5GXAXm5YOmYT0kL...</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40861</th>\n",
+       "      <td>116</td>\n",
+       "      <td>Believer</td>\n",
+       "      <td>Imagine Dragons</td>\n",
+       "      <td>1030</td>\n",
+       "      <td>https://open.spotify.com/track/0CcQNd8CINkwQfe...</td>\n",
+       "      <td>2017-12-31</td>\n",
+       "      <td>hn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40862</th>\n",
+       "      <td>117</td>\n",
+       "      <td>Tu No Vive Asi (feat. Mambo Kingz &amp; DJ Luian)</td>\n",
+       "      <td>Arcangel</td>\n",
+       "      <td>1029</td>\n",
+       "      <td>https://open.spotify.com/track/6NSMQFKgjpQb0Kk...</td>\n",
+       "      <td>2017-12-31</td>\n",
+       "      <td>hn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40863</th>\n",
+       "      <td>118</td>\n",
+       "      <td>Let Me Love You</td>\n",
+       "      <td>DJ Snake</td>\n",
+       "      <td>1025</td>\n",
+       "      <td>https://open.spotify.com/track/4pdPtRcBmOSQDlJ...</td>\n",
+       "      <td>2017-12-31</td>\n",
+       "      <td>hn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40864</th>\n",
+       "      <td>119</td>\n",
+       "      <td>Prepago</td>\n",
+       "      <td>Lary Over</td>\n",
+       "      <td>1013</td>\n",
+       "      <td>https://open.spotify.com/track/79IXzxnNe0tVXax...</td>\n",
+       "      <td>2017-12-31</td>\n",
+       "      <td>hn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40865</th>\n",
+       "      <td>120</td>\n",
+       "      <td>There's Nothing Holdin' Me Back</td>\n",
+       "      <td>Shawn Mendes</td>\n",
+       "      <td>1007</td>\n",
+       "      <td>https://open.spotify.com/track/79cuOz3SPQTuFrp...</td>\n",
+       "      <td>2017-12-31</td>\n",
+       "      <td>hn</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3212086 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Position                                         Track Name  \\\n",
+       "0             1                                              Alone   \n",
+       "1             2            Rockabye (feat. Sean Paul & Anne-Marie)   \n",
+       "2             3  I Don’t Wanna Live Forever (Fifty Shades Darke...   \n",
+       "3             4            Call On Me - Ryan Riback Extended Remix   \n",
+       "4             5                                   I Feel It Coming   \n",
+       "...         ...                                                ...   \n",
+       "40861       116                                           Believer   \n",
+       "40862       117      Tu No Vive Asi (feat. Mambo Kingz & DJ Luian)   \n",
+       "40863       118                                    Let Me Love You   \n",
+       "40864       119                                            Prepago   \n",
+       "40865       120                    There's Nothing Holdin' Me Back   \n",
+       "\n",
+       "                Artist  Streams  \\\n",
+       "0          Alan Walker   103886   \n",
+       "1         Clean Bandit    85990   \n",
+       "2                 ZAYN    68706   \n",
+       "3              Starley    60334   \n",
+       "4           The Weeknd    56607   \n",
+       "...                ...      ...   \n",
+       "40861  Imagine Dragons     1030   \n",
+       "40862         Arcangel     1029   \n",
+       "40863         DJ Snake     1025   \n",
+       "40864        Lary Over     1013   \n",
+       "40865     Shawn Mendes     1007   \n",
+       "\n",
+       "                                                     URL       Date Region  \n",
+       "0      https://open.spotify.com/track/0JiVRyTJcJnmlwC... 2017-01-01     no  \n",
+       "1      https://open.spotify.com/track/5knuzwU65gJK7IF... 2017-01-01     no  \n",
+       "2      https://open.spotify.com/track/3NdDpSvN911VPGi... 2017-01-01     no  \n",
+       "3      https://open.spotify.com/track/78rIJddV4X0HkNA... 2017-01-01     no  \n",
+       "4      https://open.spotify.com/track/5GXAXm5YOmYT0kL... 2017-01-01     no  \n",
+       "...                                                  ...        ...    ...  \n",
+       "40861  https://open.spotify.com/track/0CcQNd8CINkwQfe... 2017-12-31     hn  \n",
+       "40862  https://open.spotify.com/track/6NSMQFKgjpQb0Kk... 2017-12-31     hn  \n",
+       "40863  https://open.spotify.com/track/4pdPtRcBmOSQDlJ... 2017-12-31     hn  \n",
+       "40864  https://open.spotify.com/track/79IXzxnNe0tVXax... 2017-12-31     hn  \n",
+       "40865  https://open.spotify.com/track/79cuOz3SPQTuFrp... 2017-12-31     hn  \n",
+       "\n",
+       "[3212086 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "main"
    ]
   },
   {
