--- a/PROJ 2950.ipynb
+++ b/PROJ 2950.ipynb
@@ -3583,32 +3583,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Alone', 'Rockabye (feat. Sean Paul & Anne-Marie)',\n",
-       "       'I Don’t Wanna Live Forever (Fifty Shades Darker) - From \"Fifty Shades Darker (Original Motion Picture Soundtrack)\"',\n",
-       "       ..., 'Cásate Conmigo', 'Solo - Remix', 'Joh Es Pa Fuera Que Vas'],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "uniquefinal=finalsongs.copy()\n",
-    "uniquefinal=pd.unique(uniquefinal['track_name'])\n",
-    "uniquefinal."
+    "# uniquefinal=finalsongs.copy()\n",
+    "# uniquefinal=pd.unique(uniquefinal['track_name'])\n",
+    "# uniquefinal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3623,6 +3609,38 @@
     "\n",
     "    return audiofeatures       \n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getunique(dataframe):\n",
+    "    audiofeatures=pd.DataFrame({'danceability':[], 'energy':[],'key':[], 'loudness':[], 'mode':[], 'speechiness':[],'acousticness':[], 'instrumentalness':[],'liveness':[], 'valence':[], 'tempo':[], 'type':[],'id':[], 'uri':[],'track_href':[], 'analysis_url':[], 'duration_ms':[], 'time_signature':[]})\n",
+    "    uniquesongs=pd.unique(dataframe['track_name'])\n",
+    "    list=[]\n",
+    "        \n",
+    "    for row in range(len(dataframe)):\n",
+    "         for song in uniquesongs:\n",
+    "            if dataframe.loc[row,'track_name']==song and not song in list:\n",
+    "                url=dataframe.loc[row,'url']\n",
+    "                sub=url.rindex('/')\n",
+    "                idurl=url[sub+1:]\n",
+    "                newrow=sp.audio_features(idurl)[0]\n",
+    "                audiofeatures=audiofeatures.append(newrow,ignore_index=True)\n",
+    "                list.append(song)\n",
+    "    print(audiofeatures)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "getunique(finalsongs.copy())"
    ]
   },
   {
