--- a/PROJ 2950.ipynb
+++ b/PROJ 2950.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,6 +59,7 @@
     "#Spotify API\n",
     "import spotipy\n",
     "from spotipy.oauth2 import SpotifyClientCredentials\n",
+    "import seaborn as sns\n",
     "\n",
     "#cid AND secret IS SPECIFIC TO EACH USER. SO EVA, ESTELLE, AND CESAR SHOULD HAVE DIFFERENT CID AND SECRET. \n",
     "# Do we have to each make our own cid and secret? or can we just use mine?\n",
@@ -7857,21 +7858,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rolling=pd.DataFrame()\n",
-    "rolling['avg_danceability']=finalsongs['danceability'].rolling(14, center=True).mean()\n",
-    "\n",
-    "\n",
-    "country.      avg danceability\n",
-    "norway.       dkjfadkjf\n"
+    "# rolling=pd.DataFrame()\n",
+    "rolling = finalsongs.groupby('country', sort=False)[['danceability']].rolling(window=14).mean().reset_index()\n",
+    "# rolling['avg_danceability']=finalsongs['danceability'].rolling(14).mean()\n",
+    "rolling=rolling.merge(topbot[['country','happiness_score']], how='left',on='country')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -7895,83 +7894,133 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>avg_danceability</th>\n",
+       "      <th>country</th>\n",
+       "      <th>level_1</th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>happiness_score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>Norway</td>\n",
+       "      <td>0</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>7.537</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>Norway</td>\n",
+       "      <td>1</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>7.537</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>Norway</td>\n",
+       "      <td>2</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>7.537</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>Norway</td>\n",
+       "      <td>3</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>7.537</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>Norway</td>\n",
+       "      <td>4</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>7.537</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>355709</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>95</th>\n",
+       "      <td>Norway</td>\n",
+       "      <td>95</td>\n",
+       "      <td>0.668571</td>\n",
+       "      <td>7.537</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>355710</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>96</th>\n",
+       "      <td>Norway</td>\n",
+       "      <td>96</td>\n",
+       "      <td>0.668143</td>\n",
+       "      <td>7.537</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>355711</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>97</th>\n",
+       "      <td>Norway</td>\n",
+       "      <td>97</td>\n",
+       "      <td>0.669571</td>\n",
+       "      <td>7.537</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>355712</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>98</th>\n",
+       "      <td>Norway</td>\n",
+       "      <td>98</td>\n",
+       "      <td>0.657714</td>\n",
+       "      <td>7.537</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>355713</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>99</th>\n",
+       "      <td>Norway</td>\n",
+       "      <td>99</td>\n",
+       "      <td>0.672071</td>\n",
+       "      <td>7.537</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>337637 rows × 1 columns</p>\n",
+       "<p>100 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        avg_danceability\n",
-       "0                    NaN\n",
-       "1                    NaN\n",
-       "2                    NaN\n",
-       "3                    NaN\n",
-       "4                    NaN\n",
-       "...                  ...\n",
-       "355709               NaN\n",
-       "355710               NaN\n",
-       "355711               NaN\n",
-       "355712               NaN\n",
-       "355713               NaN\n",
+       "   country  level_1  danceability  happiness_score\n",
+       "0   Norway        0           NaN            7.537\n",
+       "1   Norway        1           NaN            7.537\n",
+       "2   Norway        2           NaN            7.537\n",
+       "3   Norway        3           NaN            7.537\n",
+       "4   Norway        4           NaN            7.537\n",
+       "..     ...      ...           ...              ...\n",
+       "95  Norway       95      0.668571            7.537\n",
+       "96  Norway       96      0.668143            7.537\n",
+       "97  Norway       97      0.669571            7.537\n",
+       "98  Norway       98      0.657714            7.537\n",
+       "99  Norway       99      0.672071            7.537\n",
        "\n",
-       "[337637 rows x 1 columns]"
+       "[100 rows x 4 columns]"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rolling"
+    "rolling.head(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scatter=sns.relplot(x='danceability', y='happiness_score', hue='country', data=rolling)\n",
+    "plt.figure(figsize = (16, 9))\n",
+    "plt.tight_layout\n",
+    "# x_ticks = np.arange(0, .01, 8)\n",
+    "# plt.xticks(x_ticks)\n",
+    "plt.show()"
    ]
   },
   {
