--- a/PROJ 2950.ipynb
+++ b/PROJ 2950.ipynb
@@ -34,6 +34,8 @@
     "### Introduction <a name=\"introduction\"></a>\n",
     "Attempting to understand what makes a country \"happy\" is often attributable to freedom, social support, life expectancy, health, among others. However, the music the people of said country listen to is often not one of these factors given its weak relationship and versatility across the world. Although our research question does not attempt to attribute the type of music a country listens to to its happiness index score (it would be difficult to establish given reverse causality), we are more interested in observing what trends are apparent in some of the happiest and less happiest countries with respect to the music they listen to. \n",
     "\n",
+    "It is no surprise that music is widely used as coping mechanism for any form of distress by most individuals across the world. Neuroscientists have attributed songs like \"Don't Stop Me Now\" by Queen and \"Dancing Queen\" by Abba as some of the happiest songs. Indeed, Spotify has thousands of playlists with titles like \"Happy Days,\" \"Happy Hits,\" Just Smile Happy Songs,\" \"Happy Songs to Sing in The Car,\" etcetera. \n",
+    "\n",
     "#### Some additional questions that we are seeking to answer...\n",
     "- What songs are there (if any) that are popular in all countries regardless of happiness rank?\n",
     "- Are there genres/styles of music that are consistent with \"happy\" countries? With \"sad\" countries? For example, can we expect happy countries to listen to more pop music than sad ones?\n",
@@ -105,7 +107,7 @@
     "**Evaluation of significance**<br>\n",
     "We used various techniques to analyze our data, but our main analysis consisted of a linear regression model to predict happiness score for 2020 based on data we trained from 2017. Specifically, we focused on using certain features (danceability, energy, key, loudness, mode, speechiness, acousticness, instrumentalness, liveness, valence, tempo, and duration_ms) as our predictor variables and our happiness score as our outcome variable. Doing a linear regression model was appropriate for our model because we had already done the correlation of some of these features and happiness score, which all resulted in insignificant results. Therefore, modeling the relationship between happiness score and these features seemed most adequate by fitting a linear equation to the observed data. This was also in line with our hypothesis asserting a positive relationship between happiness score and these features (i.e., we expected our top ten countries to have a positive, quasi-linear relationship between happiness score and some of these features, and the opposite with our bottom ten countries).\n",
     "<br><br>\n",
-    "It should be noted that we deemed correlation appropriate – and consequently linear regression – after having completed the rolling average of these top and bottom ten countries for a window of 14 days of Spotify songs’ features. We observed virtually no relationship between some of our features like danceability and valence – whose graphs support this conclusion – and happiness score, hence we resorted to other methods of potentially evaluating this relationship. As it pertains to our reasoning behind deciding to run a rolling average, we wanted to understand the possibility of there being a relationship between happiness score and individual features over fourteen days. A rolling, or moving, average analyzes data points by creating a series of averages of different subsets of a full data set, which seemed appropriate for our purposes since we were working with a dataset of ## countries for one year. Although we acknowledge that it would have been more compelling to evaluate a rolling average over a longer period [beyond fourteen days], this was impractical given time constraints. We attempted to do this, and the calculation took over three hours; further, the Spotify API – which we are using to obtain all the features for our Spotify songs – could only be run a specific number of times before we got a timing error. \n",
+    "It should be noted that we deemed correlation appropriate – and consequently linear regression – after having completed the rolling average of these top and bottom ten countries for a window of 14 days of Spotify songs’ features. We observed virtually no relationship between some of our features like danceability and valence – whose graphs support this conclusion – and happiness score, hence we resorted to other methods of potentially evaluating this relationship. As it pertains to our reasoning behind deciding to run a rolling average, we wanted to understand the possibility of there being a relationship between happiness score and individual features over fourteen days. A rolling, or moving, average analyzes data points by creating a series of averages of different subsets of a full data set, which seemed appropriate for our purposes since we were working with a dataset of ~50 countries for one year. Although we acknowledge that it would have been more compelling to evaluate a rolling average over a longer period [beyond fourteen days], this was impractical given time constraints. We attempted to do this, and the calculation took over three hours; further, the Spotify API – which we are using to obtain all the features for our Spotify songs – could only be run a specific number of times before we got a timing error. \n",
     "<br><br>\n",
     "Our correlation scores indicated there was no strong positive relationship between happiness score and each feature. Our strongest correlation (0.35)  was that between happiness score and duration_ms, which was a trivial feature for our analysis. Nevertheless, we observed slightly more positive correlations when it came to happiness rank (note: this is not the same as happiness score) and liveness (0.7), which prompted us to try the rolling average of individual features and consequently try a linear regression model. Concerning our linear regression training model, our coefficients for all features were insignificant. Nearly all of our coefficients equaled zero, except for some features like \"acousticness\" and \"liveness\", which still produced results <0.03.\n",
     "<br><br><br>\n",
@@ -4991,16 +4993,16 @@
     "*Note:The key does not show the countries in their respective order from highest to least happiest country*\n",
     "\n",
     "**This is the correct order for the top 10 countries from happiest to least happy**\n",
-    "1. Norway\n",
+    "1. Finland\n",
     "2. Denmark\n",
-    "3. Iceland\n",
-    "4. Switzerland\n",
-    "5. Finland\n",
-    "6. Netherlands\n",
-    "7. Canada\n",
+    "3. Norway\n",
+    "4. Iceland\n",
+    "5. Netherlands\n",
+    "6. Switzerland\n",
+    "7. Sweden \n",
     "8. New Zealand\n",
-    "9. Sweden\n",
-    "10. Australia"
+    "9. Canada\n",
+    "10. Austria"
    ]
   },
   {
@@ -5041,16 +5043,16 @@
     "*Note: The key does not show the countries in their respective order from highest to least happiest countries*\n",
     "    \n",
     "**This is the correct order for the bottom 10 happiest countries from happiest to least happy**\n",
-    "1. Estonia\n",
-    "2. Turkey\n",
-    "3. Paraguay\n",
-    "4. Philippines\n",
-    "5. Hungary\n",
-    "6. Indonesia\n",
-    "7. Dominican Republic\n",
-    "8. Greece\n",
-    "9. Portugal\n",
-    "10. Honduras"
+    "1. Malaysia\n",
+    "2. Greece\n",
+    "3. Morocco\n",
+    "4. Indonesia\n",
+    "5. Vietnam\n",
+    "6. Bulgaria\n",
+    "7. South Africa\n",
+    "8. Ukraine \n",
+    "9. Egypt\n",
+    "10. India"
    ]
   },
   {
