--- a/PROJ 2950.ipynb
+++ b/PROJ 2950.ipynb
@@ -3639,7 +3639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 81,
    "metadata": {
     "scrolled": true
    },
@@ -4170,7 +4170,7 @@
        "rank              1.000000  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4181,11 +4181,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'topavg' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-82-ae1eef1ec582>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtopavg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcorr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'topavg' is not defined"
+     ]
+    }
+   ],
    "source": [
     "topavg.corr()"
    ]
