Graph without the DR outlier

--- a/Spotify-Web-Scraping.ipynb
+++ b/Spotify-Web-Scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,94 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "from datetime import timedelta, date\n",
-    "import cloudscraper"
+    "import cloudscraper\n",
+    "#Spotify API\n",
+    "import spotipy\n",
+    "from spotipy.oauth2 import SpotifyClientCredentials\n",
+    "\n",
+    "#cid AND secret IS SPECIFIC TO EACH USER. SO EVA, ESTELLE, AND CESAR SHOULD HAVE DIFFERENT CID AND SECRET. \n",
+    "# Do we have to each make our own cid and secret? or can we just use mine?\n",
+    "#Eva's:\n",
+    "cid = '24ac9ca75f06477ca560d8c71807dd9e'\n",
+    "secret = '086fa8a3b056408e9bce55e3245c4af1'\n",
+    "\n",
+    "# cid='5decb5b36c3f4465a4aafb6bdf035e5d'\n",
+    "# secret='dcc15f6bb7254c12bede09644e0fb24b'\n",
+    "\n",
+    "#Estelle's:\n",
+    "# cid='c10b42de14134edfb7e9cafa42fc48a2'\n",
+    "# secret='b41981d56a924e65a079138f9272e8de'\n",
+    "client_credentials_manager = SpotifyClientCredentials(client_id=cid, client_secret=secret)\n",
+    "sp = spotipy.Spotify(client_credentials_manager\n",
+    "                    =client_credentials_manager)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'danceability': 0.681,\n",
+       " 'energy': 0.594,\n",
+       " 'key': 7,\n",
+       " 'loudness': -7.028,\n",
+       " 'mode': 1,\n",
+       " 'speechiness': 0.282,\n",
+       " 'acousticness': 0.165,\n",
+       " 'instrumentalness': 3.49e-06,\n",
+       " 'liveness': 0.134,\n",
+       " 'valence': 0.535,\n",
+       " 'tempo': 186.054,\n",
+       " 'type': 'audio_features',\n",
+       " 'id': '5aAx2yezTd8zXrkmtKl66Z',\n",
+       " 'uri': 'spotify:track:5aAx2yezTd8zXrkmtKl66Z',\n",
+       " 'track_href': 'https://api.spotify.com/v1/tracks/5aAx2yezTd8zXrkmtKl66Z',\n",
+       " 'analysis_url': 'https://api.spotify.com/v1/audio-analysis/5aAx2yezTd8zXrkmtKl66Z',\n",
+       " 'duration_ms': 230453,\n",
+       " 'time_signature': 4}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sp.audio_features('5aAx2yezTd8zXrkmtKl66Z')[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are now creating a method that will enable us to call the sp.audiofeatures() method. After some trial and error, in which we attempted to call use the Spotify API method on every URL on every song, in every row of the dataframe of each country, we realized that our method could never finish executing because the dataframes were so large and also that the Spotify API does have a limit on how many times you call their methods (we weren't allowed to use the Spotify API methods for a certain amount of time).\n",
+    "\n",
+    "We developed getunique() to first find all of the unique songs in each dataframe. We realized that for the top daily songs for a year, there is obviously a lot of repititon of songs. So using pd.unique() enabled us to find a way to reduce the amount of times we needed to call sp.audio_features(). This method returns a dataframe that is a collection of the audio features information for every unique song in each country's dataframe. \n",
+    "\n",
+    "After going to office hours and developing the following function, getunique(), we decided that using all 50+ countries was unnecessary for our analysis, and that the Spotify API could not handle so many calls. We decided to compare only the top 10 and bot 10 countries in happiness scores as is demonstrated below this text."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. Creating a new happiness dataframe that contains only the relevant countries\n",
+    "As noted in our dataset descriptions, the \"Worldwide Happiness Ranking\\\" (happy17) contains happiness data for 155 countries, while \"Spotify's Worldwide Song Ranking\" contains only 54 countries. <br><br>We needed to find the overlapping countries between these datasets to:\n",
+    "1. Create a new happiness ranking excluding the countries not found in the song ranking dataset, subsetted in the dataframe **happy**\n",
+    "    <br>\n",
+    "2. Figure out which \"Spotify's Worldwide Song Rankings\" country .csv files we do not need."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. We don't need the top 200 songs per day in a year\n",
+    "The \"Spotify Worldwide Song Rankings\" from Kaggle is far too excessive for our analysis and research purposes. Providing the top 200 songs per day in a year means that each country .csv file should have around (365+9)x200=74,800 entries (the additional 9 days are because the data set includes the first 9 days of 2018). We decided that we would remove the bottom 150 songs per day in each country's dataset. <br>\n",
+    "It is possible that we may decide to remove even more even later."
    ]
   },
   {
