--- a/PROJ 2950.ipynb
+++ b/PROJ 2950.ipynb
@@ -140,15 +140,21 @@
     "# V Data Limitations <a name=\"lims\"></a>\n",
     "When conducting this analysis, our group used only the top ten and bottom ten happiest countries, due to the limit on the number of calls you can make to the Spotify API. This limits our data size because we excluded the rest of the countries that are included within the happiness data. This affects our data by not only limiting it but also excluding countries with different cultures and the trends within that nation. \n",
     "<br><br>\n",
-    "Using data from 2017 further limits our data set because it is not up-to-date. We recognize that within our analysis that the cultures of the countries that we selected are not varying significantly, so we assumed that the type of music listened to within the different countries would not differ greatly. \n",
+    "Using data from 2019 further limits our data set because it is not up-to-date. We recognize that within our analysis that the cultures of the countries that we selected are not varying significantly, so we assumed that the type of music listened to within the different countries would not differ greatly. \n",
+    "<br>\n",
+    "Using the music platform Spotify in itself for this analysis is another limitation because it excludes the other music platforms that may be more popular in different countries. Spotify is not representative of all music platforms' data on global music streaming.\n",
     "<br><br>\n",
-    "\n",
-    "Using the music platform Spotify in itself for this analysis is another limitation because it excludes the other music platforms that may be more popular in different countries. Japan serves as a prime example of this limitation coming into play because Japan does not use Spotify as much as other countries. \n",
-    "<br><br>\n",
-    "\n",
     "While attempting to extract information from the Spotify API, our group came across issues with the security of Spotify. When re-running our code, there would be errors yielded which stated that we used our maximum amounts of retries. To mitigate this issue, we had to install a Spotify extension for our use. Additionally, Spotify installed an extra layer of security on their Spotify charts website, which hindered our ability to web-scrape the data for 2020. We were able to get 2020 data, however, some days may be missing for certain countries.  \n",
     "<br>\n",
-    "Another limitation our group recognized was that music listened to globally became more versatile in that people of different nationalities are listening to international music, due to trends. This change might not be reflected within our data analysis because, once again, we are working with data from 2017. "
+    "Another limitation our group recognized was that music listened to globally became more versatile in that people of different nationalities are listening to international music, due to trends. As different countries listen to other countries' music, it may. steer away from its own popular cultural music, which can affect the data significantly.\n",
+    "<br><br>\n",
+    "Using the rolling average is another limitation within our models. The rolling averages can be include extreme outliers which have the potential of affecting the data by skewing some of the rolling average values. This can potentially obstruct the accuracy of the models we constructed. \n",
+    "<br><br>\n",
+    "When computing the rolling average for each of the bottom ten and the top ten countries, we used data from only a 14-day period. This limits our data to only 2 weeks of the entire year for each country, instead of the full 365 days. This could have left out potential changes in trends during the course of the days excluded within the year for each of the countries. \n",
+    "<br><br>\n",
+    "Having extreme outliers is a data limitation because it can lead to skewing of certain values and can also impede on the trends within the graphs of our models. In order to express our group's efforts to make our models as accurate as possible, we created multiple models with and without the outliers --each model was differentiated and labeled-- to display trends both inclusive and exclusive of the outliers. \n",
+    "<br><br>\n",
+    "When constructing our training model, we used data from 2020, which limits our analysis even further. Given we enetered a new year, and the circumstances of 2020 (i.e., the Novel Coronavirus), our data from the previous years may not be the most accurate model in its predictions because it does not take into account potential outside factors that may impact the data. "
    ]
   },
   {
