--- a/PROJ 2950.ipynb
+++ b/PROJ 2950.ipynb
@@ -5288,7 +5288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -5302,6 +5302,15 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -5312,7 +5321,7 @@
     "plt.xlabel('country')\n",
     "plt.ylabel('happiness score based on energy, acousticness, liveness, valence, tempo, duration_ms')\n",
     "plt.show()\n",
-    "# plt.tight_layout()"
+    "#plt.tight_layout()"
    ]
   },
   {
